fix jump

--- a/static-prototype/assets/sass/components/_events-list.sass
+++ b/static-prototype/assets/sass/components/_events-list.sass
@@ -4,14 +4,26 @@
   @media (min-width: $break-ml)
     margin-top: 8rem
 
+  .events-list-image--overview
+    flex: 0 0 7rem
+    @media (min-width: $break-large)
+      flex: 0 0 14rem
+
   .events-list-image
     flex: 0 0 7rem
     img
       height: 60px
     @media (min-width: $break-large)
-      flex: 0 0 14rem
       img
         height: 120px
+
+  .events-list-image-2
+    flex: 0 0 7rem
+    img
+      height: 120px
+    @media (min-width: $break-large)
+      img
+        height: 180px
 
   .events-list-title
     font-size: 1.4rem
