--- a/static-prototype/assets/sass/components/_nav.sass
+++ b/static-prototype/assets/sass/components/_nav.sass
@@ -9,8 +9,8 @@
 .c-nav-items
   display: flex
   justify-content: center
-  overflow: auto
-  -webkit-overflow-scrolling: touch
+  //overflow: auto
+  //-webkit-overflow-scrolling: touch
   white-space: nowrap
   flex-wrap: wrap
   align-content: center
